feat: responsive navbar

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,38 +1,77 @@
 body {
+  margin: 0;
   font-family: 'Quicksand', sans-serif;
 }
 
 a {
   text-decoration: none;
+  color: #d08e3c;
 }
 
-label {
-  display: block;
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fff9eb;
+  padding: 8px 35px;
 }
 
-nav a {
-  display: inline-block;
-  margin: 1em;
+.navbar__logo {
+  font-size: 24px;
+  color: #d08e3c;
+}
+.navbar__logo-text {
+  font-size: 32px;
+  padding-left: 8px;
+  font-weight: bolder;
 }
 
-form div {
-  margin: 1em;
-  display: inline-block;
+.navbar__menu {
+  display: flex;
+  list-style: none;
+  padding-left: 0;
+}
+.navbar__menu li {
+  padding: 8px 35px;
+}
+.navbar__menu li:hover {
+  background-color: #ffedbf;
+  border-radius: 5px;
 }
 
-h1 {
-  font-family: 'Quicksand', sans-serif;
-  padding-left: 1rem;
+.navbar__button {
+  display: flex;
+  padding-left: 0;
+}
+.navbar__button .nav-button {
+  padding: 8px 35px;
 }
 
-h2 {
-  font-family: 'Quicksand', sans-serif;
-  padding-left: 2rem;
-  color: white;
-}
+@media screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 8px 24px;
+  }
 
-h3 {
-  font-family: 'Quicksand', sans-serif;
+  .navbar__menu {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+
+  .navbar__menu li {
+    width: 100%;
+    text-align: center;
+  }
+
+  .navbar__button {
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+  }
 }
 
 #weeklyPricesContainer {
