--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -9,22 +10,27 @@ a {
 }
 
 .navbar {
+  width: 100%;
+  border-bottom: 2px solid #f1f1f1;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   background-color: #fff9eb;
   padding: 8px 35px;
+  box-shadow: 0px 1px 0px #e5e9f2;
 }
 
 .navbar__logo {
   font-size: 24px;
   color: #d08e3c;
+  padding: 15px 0;
 }
 .navbar__logo-text {
   font-size: 32px;
-  padding-left: 8px;
+  padding-left: 10px;
   font-weight: bolder;
+  color: #d08e3c;
 }
 
 .navbar__menu {
@@ -53,6 +59,7 @@ a {
     flex-direction: column;
     align-items: flex-start;
     padding: 8px 24px;
+    margin: 0;
   }
 
   .navbar__menu {
