feat: final completed responsive nav bar

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,6 +1,12 @@
+/* ---------------------- GLOBAL --------------------------------- */
+:root {
+  --primary: #ffcb8a;
+}
+
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
   font-family: 'Quicksand', sans-serif;
 }
 
@@ -9,77 +15,214 @@ a {
   color: #d08e3c;
 }
 
+.btn {
+  padding: 8px 20px;
+  border-radius: 8px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 50%;
+  padding: 8px 20px;
+  transition: all 0.3s ease-out;
+  background: var(--primary);
+  transition: 250ms;
+}
+
+.btn--primary {
+  background-color: var(--primary);
+}
+
+.btn--outline {
+  background-color: transparent;
+  color: #fff;
+  padding: 8px 20px;
+  border-radius: 8px;
+  border: 1px solid var(--primary);
+  transition: all 0.3s ease-out;
+}
+
+.btn--medium {
+  margin: 10px;
+  padding: 8px 20px;
+  border-radius: 4px;
+  font-size: 18px;
+  color: #fff;
+}
+
+.btn-large {
+  padding: 12px 26px;
+  border-radius: 4px;
+  font-size: 20px;
+  color: #fff;
+}
+
+/* ---------------------- NAV BAR --------------------------------- */
 .navbar {
-  width: 100%;
-  border-bottom: 2px solid #f1f1f1;
+  background-color: rgba(255, 249, 235);
+  height: 80px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #fff9eb;
+  font-size: 1.2rem;
   padding: 8px 35px;
-  box-shadow: 0px 1px 0px #e5e9f2;
 }
 
-.navbar__logo {
-  font-size: 24px;
+.navbar-logo {
+  font-size: 2rem;
   color: #d08e3c;
-  padding: 15px 0;
-}
-.navbar__logo-text {
-  font-size: 32px;
-  padding-left: 10px;
   font-weight: bolder;
-  color: #d08e3c;
+  cursor: pointer;
 }
 
-.navbar__menu {
+.fa-utensils {
+  margin-right: 0.5rem;
+  font-size: 1.6rem;
+}
+
+.nav-menu {
+  /* display: grid;
+  grid-template-columns: repeat(3, auto);
+  grid-gap: 20px;
+  list-style: none;
+  text-align: center;
+  width: 70vw; */
   display: flex;
   list-style: none;
   padding-left: 0;
+
+  /* display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  list-style: none;
+
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 2rem; */
 }
-.navbar__menu li {
-  padding: 8px 35px;
+
+.nav-links {
+  color: #d08e3c;
+  text-decoration: none;
+  padding: 0.5rem 3rem;
 }
-.navbar__menu li:hover {
+
+.nav-links:hover {
   background-color: #ffedbf;
   border-radius: 5px;
+  transition: all 0.3s ease-out;
 }
 
-.navbar__button {
-  display: flex;
-  padding-left: 0;
-}
-.navbar__button .nav-button {
-  padding: 8px 35px;
+.fa-bars {
+  color: #d08e3c;
+  font-size: 2rem;
 }
 
-@media screen and (max-width: 768px) {
+.nav-button-mobile {
+  display: none;
+}
+
+.menu-icon {
+  display: none;
+}
+
+@media screen and (max-width: 950px) {
   .navbar {
     flex-direction: column;
     align-items: flex-start;
     padding: 8px 24px;
-    margin: 0;
+    justify-content: center;
   }
 
-  .navbar__menu {
+  .nav-menu {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    padding-left: 0;
+
+    position: absolute;
+    top: 90px;
+    left: -150%;
+    opacity: 1;
+    transition: all 0.5s ease;
   }
 
-  .navbar__menu li {
+  .nav-menu li {
     width: 100%;
     text-align: center;
+    padding-left: 0;
   }
 
-  .navbar__button {
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
+  .nav-menu.active {
+    margin: 0;
+    padding-left: 0;
+    background: #fff9eb;
+    left: 0;
+    opacity: 1;
+    transition: all 0.5s ease;
     width: 100%;
+    z-index: 1;
+  }
+
+  .nav-links {
+    text-align: center;
+    padding-left: 0;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+
+    width: 100%;
+    display: table;
+  }
+
+  .nav-links:hover {
+    width: 100%;
+    background-color: #ffedbf;
+    border-radius: 5px;
+    transition: all 0.2s ease-out;
+  }
+
+  .menu-icon {
+    display: block;
+    position: absolute;
+    right: 32px;
+    font-size: 1.8rem;
+    cursor: pointer;
+  }
+
+  .fa-times {
+    color: #d08e3c;
+    font-size: 2rem;
+  }
+
+  .nav-button-mobile {
+    display: block;
+    text-align: center;
+    padding: 1.5rem;
+    margin: 2rem auto;
+    border-radius: 8px;
+    width: 80%;
+    background: #ffcb8a;
+    text-decoration: none;
+    color: #fff;
+    font-size: 1.5rem;
+  }
+
+  .nav-button-mobile:hover {
+    opacity: 50%;
+    background: #ffcb8a;
+    color: #fff;
+    transition: 250ms;
+  }
+
+  button {
+    display: none;
   }
 }
+
+/* ------------------------------------------------------- */
 
 #weeklyPricesContainer {
   padding: 1rem 5rem 0 5rem;
