chore: styled grocery shopping list

--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,7 @@
 :root {
   --primary: #ffcb8a;
   --lightblue: #b0bdff;
+  --brown: #d08e3c;
 }
 
 body {
@@ -9,6 +10,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: 'Quicksand', sans-serif;
+  color: var(--brown);
 }
 
 a {
@@ -295,4 +297,69 @@ a {
   font-weight: 500;
   font-size: 1rem;
   padding: 0.5rem 0 0.5rem 0;
+}
+/* -----------------------MEAL PLAN-------------------------------- */
+.app-background {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.main-container {
+  background-color: #fff9eb;
+  width: 500px;
+  height: min-content;
+  border-radius: 5px;
+  padding: 20px;
+  box-shadow: 10px 10px 26px 0px rgba(0, 0, 0, 0.35);
+}
+
+.add-item-box {
+  background: white;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  display: flex;
+  align-items: center;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.add-item-input {
+  box-sizing: border-box;
+  border: none;
+  background: transparent;
+  color: #d08e3c;
+  width: 100%;
+  height: 30px;
+  font-size: 1rem;
+}
+
+input::placeholder {
+  color: #d08e3c;
+}
+input:focus {
+  outline: 0;
+}
+
+.item-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.item-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 20px 0 20px 0;
+  border-bottom: 1px #e1cbaf solid;
+}
+
+.item-detail {
+  flex-direction: row;
+}
+
+.total {
+  float: right;
+  padding: 10px;
 }
