--- a/public/style.css
+++ b/public/style.css
@@ -300,7 +300,7 @@ input:focus {
   background: var(--primary);
   border: none;
 }
-/* -----------------------MEAL PLAN-------------------------------- */
+/* -----------------------CALENDAR-------------------------------- */
 .week-name-box {
   min-width: 900px;
   margin-right: 6rem;
@@ -399,30 +399,63 @@ input:focus {
 .menu {
   width: 100px;
   box-sizing: border-box;
+  background-color: var(--primary);
+  color: white;
+  padding: 4px;
+  margin: 4px;
+  border-radius: 5px;
+  text-align: center;
 }
 /* -----------------------Modal-------------------------------- */
 
 .modal {
-  width: 500px;
-  background: white;
-  border: 1px solid #ccc;
-  transition: 1.1s ease-out;
-  box-shadow: 1rem 0 0 rgba(black, 0.2);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.02);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-h2 {
-  border-bottom: 1px solid #ccc;
-  padding: 1rem;
+.modal-content {
+  width: 500px;
+  background-color: #fff;
+}
+
+.modal-header {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--brown);
+}
+
+.modal-title {
   margin: 0;
 }
-.content {
-  padding: 1rem;
+
+.modal-body {
+  padding: 10px;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+/* ----------------------- ADD MENU FORM (Modal Body 1) -------------------------------- */
+.add-menu-form {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  color: var(--brown);
 }
 
-#centered-toggle-button {
-  position: absolute;
+input[type='text'] {
+  color: var(--brown);
 }
-
 /* -----------------------Cart -------------------------------- */
 
 .category-div {
