wip: restore recipe search

--- a/public/style.css
+++ b/public/style.css
@@ -238,7 +238,6 @@ a {
   justify-content: center;
   align-items: flex-start;
   min-height: 100vh;
-  padding-top: 100px;
 }
 
 .main-container {
@@ -247,6 +246,7 @@ a {
   height: min-content;
   border-radius: 5px;
   padding: 20px;
+  margin-top: 100px;
   box-shadow: 10px 10px 26px 0px rgba(0, 0, 0, 0.35);
 }
 
@@ -448,13 +448,39 @@ input:focus {
   width: 100%;
   height: 300px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   color: var(--brown);
+  box-sizing: border-box;
+  padding: 20px;
+}
+
+.add-menu-form-input {
+  width: 100%;
+  margin-bottom: 30px;
 }
 
 input[type='text'] {
   color: var(--brown);
+}
+
+.add-menu-btn {
+  padding: 8px 20px;
+  border-radius: 8px;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  background: var(--lightblue);
+  color: white;
+  margin-bottom: 30px;
+}
+
+.add-menu-btn :hover {
+  opacity: 50%;
+  padding: 8px 20px;
+  transition: all 0.3s ease-out;
+  background: var(--lightblue);
+  transition: 250ms;
 }
 /* -----------------------Cart -------------------------------- */
 
@@ -490,6 +516,7 @@ input[type='text'] {
 }
 .completed {
   text-decoration: line-through;
+  padding-left: 10px;
 }
 
 .incompleted {
